<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mac.prmsdemo.fragment_order_menu">

    <!-- TODO: Update blank fragment layout -->

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:columnCount="5"
        android:rowCount="5">


        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_column="0"
            android:layout_columnWeight="0.2"
            android:layout_marginRight="10dp"
            android:layout_row="0"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/order_mainfood_friedrice" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_columnWeight="0.2"
            android:layout_marginRight="10dp"
            android:layout_row="0"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/order_mainfood_eggfriedrice" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_columnWeight="0.2"
            android:layout_marginRight="10dp"
            android:layout_row="0"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/order_mainfood_seafoodspaghetti" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_columnWeight="0.2"
            android:layout_marginRight="10dp"
            android:layout_row="0"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/order_mainfood_tomatospaghetti" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_columnWeight="0.2"
            android:layout_marginRight="10dp"
            android:layout_row="0"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/order_mainfood_noodles" />

        <TextView
            android:id="@+id/txtDemo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="0.2"
            android:layout_row="1"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/txtMealDemo1" />

        <TextView
            android:id="@+id/txtDemo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.2"
            android:layout_row="1"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/txtMealDemo2" />

        <TextView
            android:id="@+id/txtDemo3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.2"
            android:layout_row="1"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/txtMealDemo3" />

        <TextView
            android:id="@+id/txtDemo4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.2"
            android:layout_row="1"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/txtMealDemo4" />

        <TextView
            android:id="@+id/txtDemo5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.2"
            android:layout_row="1"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/txtMealDemo5" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_column="0"
            android:layout_columnWeight="0.2"
            android:layout_marginRight="10dp"
            android:layout_row="2"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/order_mainfood_porkchops" />

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_column="1"
            android:layout_columnWeight="0.2"
            android:layout_marginRight="10dp"
            android:layout_row="2"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/order_mainfood_steak" />

        <ImageButton
            android:id="@+id/imageButton8"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_column="2"
            android:layout_columnWeight="0.2"
            android:layout_marginRight="10dp"
            android:layout_row="2"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/order_mainfood_porkrice" />

        <TextView
            android:id="@+id/txtDemo6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="0.2"
            android:layout_row="3"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/txtMealDemo6" />

        <TextView
            android:id="@+id/txtDemo7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.2"
            android:layout_row="3"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/txtMealDemo7" />

        <TextView
            android:id="@+id/txtDemo8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.2"
            android:layout_row="3"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/txtMealDemo8" />

    </GridLayout>

</FrameLayout>
